--- a/gmall-pms/pom.xml
+++ b/gmall-pms/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.ketai</groupId>
     <artifactId>gmall-pms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>pms</name>
+    <name>gmall-pms</name>
     <description>谷粒商城商品管理系统</description>
 
     <properties>
